# fbx-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  tag.yml  test.yml
src/: app.rs  client.rs  config.rs  main.rs  terminal.rs
src/handlers/: auth.rs  config.rs  device.rs  dhcp.rs  file.rs  ftp.rs  init.rs  lcd.rs  mod.rs  nat.rs  port.rs  settings.rs  system.rs  vm.rs  wifi.rs
src/models/: args.rs  display.rs  exception.rs  mod.rs
src/models/freebox/: air_media.rs  authorization.rs  call.rs  connection.rs  dhcp.rs  download.rs  file.rs  ftp.rs  home.rs  lan.rs  language.rs  lcd.rs  mod.rs  notification.rs  parent_filter.rs  player_device.rs  port_forwarding.rs  pvr.rs  rrd.rs  sfp.rs  standby.rs  switch.rs  system.rs  version.rs  vm.rs  vpn.rs  wifi.rs
src/models/freebox/call/: contact.rs  global.rs  mod.rs  voicemail.rs
src/models/freebox/configuration/: connection.rs  dhcp.rs  ftp.rs  lan.rs  lcd.rs  mod.rs  port_forwarding.rs  system.rs  upnp.rs
src/models/freebox/downloads/: global.rs  mod.rs
src/models/freebox/storage/: global.rs  mod.rs  raid.rs
src/models/freebox/vpn/: client.rs  server.rs
src/models/freebox/wifi/: access_point.rs  bss.rs  diagnostic.rs  global.rs  guest.rs  mac_filter.rs  mod.rs  planning.rs  radar.rs  wps.rs
src/services/: api.rs  discover.rs  man.rs  mod.rs
