[package]
name = "fbx_cli"
version = "0.0.1"
edition = "2021"
description = "Freebox OS CLI"
authors = ["Nikho", "luannbertaud"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/frnikho/free-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
reqwest = {version = "0.12.4", features = ["json"]}
man = "0.3.0"
ratatui = {version = "0.26.2", features = ["crossterm"]}
crossterm = {version = "0.27.0", features = ["serde"]}
clap = {version = "4.5.4", features = ["derive"]}
mdns = "3.0.0"
futures-util = "0.3.30"
async-std = "1.12.0"
time = "0.3.36"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
hmac-sha1 = "0.2.2"
sha1 = "0.10.6"
hmac = "0.12.1"

chrono = { version = "0.4.38", features = ["serde"] }
inquire = { version = "0.7.5", features = ["chrono"] }
comfy-table = { version = "7.1.1" }
confy = {version = "0.6.1", features = ["toml"]}
spinners = "4.1.1"
whoami = {version = "1.5.1", features = []}
url = "2.5.0"

[build-dependencies]
clap = "4.5.4"
clap_generate = "3.0.3"
