[package]
name = "fbx"
version = "0.0.1"
edition = "2021"
description = "Freebox OS CLI"
authors = ["Nikho", "luannbertaud"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/frnikho/free-cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "default-tls"] }
man = "0.3.0"
clap = { version = "4.5.4", features = ["derive"] }
mdns = "3.0.0"
futures-util = { version = "0.3.30", default-features = false }
time = { version = "0.3.36", default-features = false }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
sha1 = { version = "0.10.6", default-features = false }
hmac = "0.12.1"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
inquire = { version = "0.7.5", features = ["chrono", "crossterm"], default-features = false }
comfy-table = "7.1.1"
confy = "0.6.1"
spinners = "4.1.1"
whoami = { version = "1.5.1", default-features = false }
url = "2.5.0"
anyhow = { version = "1.0.86", default-features = false }
thiserror = "1.0.61"
tabular = "0.2.0"
qr2term = "0.3.1"
serde_with = {version = "3.9.0", features = ["chrono", "json"]}

[build-dependencies]
clap = { version = "4.5.4", default-features = false }
clap_generate = "3.0.3"